# src/main/java/ru/maltsev/primemarketbackend/deposit/api/dto/ConfirmDepositRequest.java
@@ -1,10 +1,9 @@
 package ru.maltsev.primemarketbackend.deposit.api.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import jakarta.validation.constraints.NotBlank;
 
-public record RejectDepositRequest(
-    @JsonProperty("reject_reason") @NotBlank String rejectReason,
+public record ConfirmDepositRequest(
+    @JsonProperty("confirmation_reference") String confirmationReference,
     @JsonProperty("operator_comment") String operatorComment
 ) {
 }
